--- a/QMP.Web/QMP.Web.csproj
+++ b/QMP.Web/QMP.Web.csproj
@@ -320,6 +320,7 @@
     <Content Include="Areas\WeiXin\Views\XiangZhen\Index.cshtml" />
     <Content Include="Areas\WeiXin\Views\XiangZhen\Index2.cshtml" />
     <Content Include="Areas\WeiXin\Views\XiangZhen\Map.cshtml" />
+    <Content Include="Areas\WeiXin\Views\Live\HistoryDotNet.cshtml" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\Highcharts-4.0.1\js\adapters\standalone-framework.js" />
     <Content Include="Scripts\Highcharts-4.0.1\js\adapters\standalone-framework.src.js" />
@@ -360,29 +361,7 @@
     <Content Include="Scripts\jquery-3.1.1.slim.min.js" />
     <Content Include="Scripts\jquery-3.1.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.1.1.min.map" />
-    <Content Include="Scripts\jQuery-nav\jquery插件库.url" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
-    <Content Include="Scripts\jQuery-nav\css\jq22-demo.css" />
-    <Content Include="Scripts\jQuery-nav\css\main.css" />
-    <Content Include="Scripts\jQuery-nav\css\normalize.css" />
-    <Content Include="Scripts\jQuery-nav\example10.html" />
-    <Content Include="Scripts\jQuery-nav\example11.html" />
-    <Content Include="Scripts\jQuery-nav\example12.html" />
-    <Content Include="Scripts\jQuery-nav\example13.html" />
-    <Content Include="Scripts\jQuery-nav\example14.html" />
-    <Content Include="Scripts\jQuery-nav\example15.html" />
-    <Content Include="Scripts\jQuery-nav\example2.html" />
-    <Content Include="Scripts\jQuery-nav\example3.html" />
-    <Content Include="Scripts\jQuery-nav\example4.html" />
-    <Content Include="Scripts\jQuery-nav\example5.html" />
-    <Content Include="Scripts\jQuery-nav\example6.html" />
-    <Content Include="Scripts\jQuery-nav\example7.html" />
-    <Content Include="Scripts\jQuery-nav\example8.html" />
-    <Content Include="Scripts\jQuery-nav\example9.html" />
-    <Content Include="Scripts\jQuery-nav\index.html" />
-    <Content Include="Scripts\jQuery-nav\js\jquery-2.1.1.min.js" />
-    <Content Include="Scripts\jQuery-nav\www.jq22.com.txt" />
-    <Content Include="Scripts\jQuery-nav\_assets\photo1.jpg" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
