--- a/QMP.Web/QMP.Web.csproj
+++ b/QMP.Web/QMP.Web.csproj
@@ -56,6 +56,10 @@
       <HintPath>..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="HaiRui.Mvc, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\HaiRui.Mvc.1.0.0\lib\HaiRui.Mvc.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="HaiRui.Web, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\HaiRui.Web.1.0.1\lib\HaiRui.Web.dll</HintPath>
       <Private>True</Private>
@@ -171,6 +175,7 @@
     <Compile Include="Areas\Admin\Controllers\WarnInfosController.cs" />
     <Compile Include="Areas\Admin\Controllers\WeatherInfosController.cs" />
     <Compile Include="Areas\WeiXin\Controllers\AQIController.cs" />
+    <Compile Include="Areas\WeiXin\Controllers\CheckOldController.cs" />
     <Compile Include="Areas\WeiXin\Controllers\CheckController.cs" />
     <Compile Include="Areas\WeiXin\Controllers\LiveController.cs" />
     <Compile Include="Areas\WeiXin\Controllers\ServiceInfosController.cs" />
@@ -321,6 +326,7 @@
     <Content Include="Areas\WeiXin\Views\XiangZhen\Index2.cshtml" />
     <Content Include="Areas\WeiXin\Views\XiangZhen\Map.cshtml" />
     <Content Include="Areas\WeiXin\Views\Live\HistoryDotNet.cshtml" />
+    <None Include="Properties\PublishProfiles\mvc5.pubxml" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\Highcharts-4.0.1\js\adapters\standalone-framework.js" />
     <Content Include="Scripts\Highcharts-4.0.1\js\adapters\standalone-framework.src.js" />
@@ -790,6 +796,11 @@
     <Content Include="Scripts\summernote-master\src\less\summernote.less" />
     <Content Include="Scripts\summernote-master\src\less\summernote.scss" />
     <Content Include="Scripts\summernote-master\test\.jshintrc" />
+    <Content Include="Views\Users\Login.cshtml" />
+    <Content Include="Views\Users\Login1.cshtml" />
+    <Content Include="Views\Users\Register.cshtml" />
+    <Content Include="Views\Users\Register1.cshtml" />
+    <Content Include="Views\Test\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -798,8 +809,6 @@
     <Folder Include="Areas\WeiXin\Models\" />
     <Folder Include="Models\" />
     <Folder Include="Views\Home\" />
-    <Folder Include="Views\Test\" />
-    <Folder Include="Views\Users\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
