--- a/QMP.Web/Web.config
+++ b/QMP.Web/Web.config
@@ -20,6 +20,7 @@
     <authentication mode="Forms">
       <forms loginUrl="~/Users/Login" timeout="2880" />
     </authentication>
+    <customErrors mode="Off" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
