--- a/QMP.Web/packages.config
+++ b/QMP.Web/packages.config
@@ -6,6 +6,7 @@
   <package id="DotNet.Highcharts" version="4.0" targetFramework="net461" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net461" />
   <package id="EntityFramework.zh-Hans" version="5.0.0" targetFramework="net461" />
+  <package id="HaiRui.Mvc" version="1.0.0" targetFramework="net461" />
   <package id="HaiRui.Web" version="1.0.1" targetFramework="net461" />
   <package id="jQuery" version="3.1.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net461" />
