--- a/QMP.Web/QMP.Web.csproj
+++ b/QMP.Web/QMP.Web.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Areas\Admin\Controllers\UsersController.cs" />
     <Compile Include="Areas\Admin\Controllers\WarnInfosController.cs" />
     <Compile Include="Areas\Admin\Controllers\WeatherInfosController.cs" />
+    <Compile Include="Areas\Admin\Controllers\YuJingTestController.cs" />
     <Compile Include="Areas\WeiXin\Controllers\AQIController.cs" />
     <Compile Include="Areas\WeiXin\Controllers\CheckOldController.cs" />
     <Compile Include="Areas\WeiXin\Controllers\CheckController.cs" />
@@ -334,6 +335,7 @@
     <Content Include="fonts\fontawesome-webfont.woff" />
     <Content Include="fonts\fontawesome-webfont.ttf" />
     <Content Include="fonts\fontawesome-webfont.eot" />
+    <Content Include="Areas\Admin\Views\YuJingTest\Index.cshtml" />
     <None Include="Properties\PublishProfiles\mvc5.pubxml" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\Highcharts-4.0.1\js\adapters\standalone-framework.js" />
