--- a/QMP.Web/Web.config
+++ b/QMP.Web/Web.config
@@ -65,6 +65,5 @@
   </entityFramework>
 <connectionStrings>
   <add name="OracleSAEntities" connectionString="metadata=res://*/Oracle.OracleSAModel.csdl|res://*/Oracle.OracleSAModel.ssdl|res://*/Oracle.OracleSAModel.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=ORCL;PASSWORD=system;USER ID=SA&quot;" providerName="System.Data.EntityClient" />
-  <add name="QMPEntities" connectionString="metadata=res://*/SQL.QMPModel.csdl|res://*/SQL.QMPModel.ssdl|res://*/SQL.QMPModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=172.18.226.145;initial catalog=QxWeiXin;user id=sa;password=chinags;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-
+  <add name="QMPEntities" connectionString="metadata=res://*/SQL.QMPModel.csdl|res://*/SQL.QMPModel.ssdl|res://*/SQL.QMPModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=172.18.226.145;initial catalog=WeiXinDB;user id=sa;password=chinags;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 </connectionStrings></configuration>
