--- a/QMP.Web/QMP.Web.csproj
+++ b/QMP.Web/QMP.Web.csproj
@@ -160,6 +160,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Areas\Super\Controllers\StationController.cs" />
+    <Compile Include="Areas\Super\SuperAreaRegistration.cs" />
     <Compile Include="fonts\App_Start\BundleConfig.cs" />
     <Compile Include="fonts\App_Start\FilterConfig.cs" />
     <Compile Include="fonts\App_Start\RouteConfig.cs" />
@@ -339,6 +341,8 @@
     <Content Include="fonts\fontawesome-webfont.eot" />
     <Content Include="Areas\Admin\Views\YuJingTest\Index.cshtml" />
     <Content Include="Areas\WeiXin\Views\Emergency\Map.cshtml" />
+    <Content Include="Areas\Super\Views\web.config" />
+    <Content Include="Areas\Super\Views\Station\OracleToSql.cshtml" />
     <None Include="Properties\PublishProfiles\mvc5.pubxml" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\Highcharts-4.0.1\js\adapters\standalone-framework.js" />
@@ -819,6 +823,8 @@
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Areas\Admin\Views\Shared\" />
+    <Folder Include="Areas\Super\Models\" />
+    <Folder Include="Areas\Super\Views\Shared\" />
     <Folder Include="Areas\WeiXin\Models\" />
     <Folder Include="Models\" />
     <Folder Include="Views\Home\" />
