--- a/QMP.Web/packages.config
+++ b/QMP.Web/packages.config
@@ -10,6 +10,7 @@
   <package id="HaiRui.Mvc" version="1.0.0" targetFramework="net461" />
   <package id="HaiRui.Web" version="1.0.1" targetFramework="net461" />
   <package id="jQuery" version="3.1.1" targetFramework="net461" />
+  <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc.zh-Hans" version="5.2.3" targetFramework="net461" />
