--- a/QMP.DAL/QMP.DAL.csproj
+++ b/QMP.DAL/QMP.DAL.csproj
@@ -46,6 +46,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Xml.Linq" />
@@ -61,6 +62,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Radar_DAL.cs" />
     <Compile Include="SQL\Base_DAL_QMP.cs" />
+    <Compile Include="SQL\Emergency\Emergency_Station_DAL.cs" />
     <Compile Include="SQL\DAL_Template_QMP.cs">
       <DependentUpon>DAL_Template_QMP.tt</DependentUpon>
       <AutoGen>True</AutoGen>
